# dictator

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DISTRIBUTION.md  INSTALL.md  LICENSE  MOBILE_ARCHITECTURE.md  README.md  claude-progress.txt  features.json  init.sh
.claude/: settings.json
Dictator/: ADD-ICON.md  INSTALL.txt  Package.swift  build-app.sh  build-for-distribution.sh  bundle-models.sh  claude-progress.txt  create-app-icon.sh  install-dictator.sh  package-for-distribution.sh  reset-onboarding.sh
Dictator/Sources/Dictator/: Info.plist
Dictator/Sources/Dictator/App/: AppDelegate.swift  DictatorApp.swift  LaunchAtLoginService.swift
Dictator/Sources/Dictator/Audio/: AudioRecorder.swift  GlobalHotkeyManager.swift  RecordingService.swift  SoundEffectService.swift
Dictator/Sources/Dictator/Injection/: TextInjectionService.swift
Dictator/Sources/Dictator/LLM/: LLMService.swift  OllamaClient.swift  OllamaManager.swift  OpenRouterClient.swift
Dictator/Sources/Dictator/Resources/: AppIcon.icns
Dictator/Sources/Dictator/STT/: TranscriptionService.swift
Dictator/Sources/Dictator/Stats/: StatsService.swift  TranscriptionLogger.swift
Dictator/Sources/Dictator/Storage/: EnvLoader.swift  KeychainManager.swift
Dictator/Sources/Dictator/UI/: AboutWindow.swift  FloatingIndicator.swift  NotificationService.swift  OnboardingWindow.swift  SettingsWindow.swift  StatusBarController.swift
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
(+31 files in other folders)
